--- a/opera.html
+++ b/opera.html
@@ -97,6 +97,462 @@
         <br>
         SONG—ANTONIO and CHORUS.
         <br>
+        For the merriest fellows are we, tra la,<br>
+        That ply on the emerald sea, tra la;<br>
+        With loving and laughing,<br>
+        And quipping and quaffing,<br>
+        We're happy as happy can be, tra la—<br>
+        With loving and laughing, etc.<br>
+        <br>
+        With sorrow we've nothing to do, tra la,<br>
+        And care is a thing to pooh-pooh, tra la;<br>
+        And Jealousy yellow,<br>
+        Unfortunate fellow,<br>
+        We drown in the shimmering blue, tra la—<br>
+        And Jealousy yellow, etc.<br>
+        <br>
+        FIA. (looking off). See, see, at last they come to make their
+        choice—<br>
+        Let us acclaim them with united voice.<br>
+        (Marco and Giuseppe appear in gondola at back.)<br>
+        <br>
+        CHORUS (Girls). Hail, hail! gallant gondolieri, ben venuti!<br>
+        Accept our love, our homage, and our duty.<br>
+        Ben' venuti! ben' venuti!<br>
+        <br>
+        (Marco and Giuseppe jump ashore—the Girls salute them.)<br>
+        <br>
+        DUET—MARCO and GIUSEPPE, with CHORUS OF GIRLS.<br>
+        <br>
+        MAR. and GIU. Buon' giorno, signorine!<br>
+        <br>
+        GIRLS. Gondolieri carissimi!
+        Siamo contadine!<br>
+        <br>
+        MAR. and GIU. (bowing). Servitori umilissimi!
+        Per chi questi fiori—
+        Questi fiori bellissimi?<br>
+        <br>
+        GIRLS. Per voi, bei signori
+        O eccellentissimi!<br>
+        <br>
+        (The Girls present their bouquets to Marco and Giuseppe, who are<br>
+        overwhelmed with them, and carry them with difficulty.)<br>
+        <br>
+        MAR. and GIU. (their arms full of flowers). O ciel'! O ciel'!<br>
+        <br>
+        GIRLS. Buon' giorno, cavalieri!
+        <br>
+        MAR. and GIU. (deprecatingly). Siamo gondolieri.
+        <br>
+        (To Fia. and Vit.) Signorina, io t' amo!
+        <br>
+        GIRLS. (deprecatingly). Contadine siamo.
+        <br>
+        MAR. and GIU. Signorine!
+        <br>
+        GIRLS (deprecatingly). Contadine!
+        <br>
+        (Curtseying to Mar. and Giu.) Cavalieri.
+        <br>
+        MAR. and GIU. (deprecatingly). Gondolieri!
+        Poveri gondolieri!<br>
+        <br>
+        CHORUS. Buon' giorno, signorine, etc.
+        <br>
+        DUET—MARCO and GIUSEPPE.
+        <br>
+        We're called gondolieri,<br>
+        But that's a vagary,<br>
+        It's quite honorary<br>
+        The trade that we ply.<br>
+        For gallantry noted<br>
+        Since we were short-coated,<br>
+        To beauty devoted,<br>
+        Giuseppe\Are Marco and I;<br>
+        <br>
+        When morning is breaking,<br>
+        Our couches forsaking,<br>
+        To greet their awaking<br>
+        With carols we come.<br>
+        At summer day's nooning,<br>
+        When weary lagooning,<br>
+        Our mandolins tuning,<br>
+        We lazily thrum.<br>
+        <br>
+        When vespers are ringing,<br>
+        To hope ever clinging,<br>
+        With songs of our singing<br>
+        A vigil we keep,<br>
+        When daylight is fading,<br>
+        Enwrapt in night's shading,<br>
+        With soft serenading<br>
+        We sing them to sleep.<br>
+        <br>
+        We're called gondolieri, etc.
+        <br>
+        RECITATIVE—MARCO and GIUSEPPE.
+        <br>
+        MAR. And now to choose our brides!
+        <br>
+        GIU. As all are young and fair,
+        And amiable besides,
+        <br>
+        BOTH. We really do not care
+        A preference to declare.
+        <br>
+        MAR. A bias to disclose
+        Would be indelicate—
+        <br>
+        GIU. And therefore we propose<br>
+        To let impartial Fate<br>
+        Select for us a mate!<br>
+        <br>
+        ALL. Viva!
+        <br>
+        GIRLS. A bias to disclose
+        Would be indelicate—<br>
+        <br>
+        MEN. But how do they propose
+        To let impartial Fate
+        Select for them a mate?<br>
+        <br>
+        GIU. These handkerchiefs upon our eyes be good enough to
+        bind,<br>
+        <br>
+        MAR. And take good care that both of us are absolutely
+        blind;<br>
+        <br>
+        BOTH. Then turn us round—and we, with all convenient
+        despatch,<br>
+        Will undertake to marry any two of you we catch!<br>
+        <br>
+        ALL. Viva!<br>
+        They undertake to marry any two of us\them they catch!<br>
+        <br>
+        (The Girls prepare to bind their eyes as directed.)<br>
+        <br>
+        FIA. (to Marco). Are you peeping?<br>
+        Can you see me?<br>
+        <br>
+        MAR. Dark I'm keeping,
+        Dark and dreamy!<br>
+        <br>
+        (Marco slyly lifts
+        bandage.)<br>
+        <br>
+        VIT. (to Giuseppe). If you're blinded
+        Truly, say so<br>
+        <br>
+        GIU. All right-minded
+        Players play so!
+        (slyly lifts bandage).<br>
+        <br>
+        FIA. (detecting Marco). Conduct shady!<br>
+        They are cheating!<br>
+        Surely they de-<br>
+        Serve a beating!<br>
+        (replaces bandage).<br>
+        <br>
+        VIT. (detecting Giuseppe). This too much is;<br>
+        Maidens mocking—<br>
+        Conduct such is<br>
+        Truly shocking!<br>
+        (replaces bandage).<br>
+        <br>
+        ALL. You can spy, sir!<br>
+        Shut your eye, sir!<br>
+        You may use it by and by, sir!<br>
+        You can see, sir!<br>
+        Don't tell me, sir!<br>
+        That will do—now let it be, sir!<br>
+        <br>
+        CHORUS OF GIRLS. My papa he keeps three horses,<br>
+        Black, and white, and dapple grey, sir;<br>
+        Turn three times, then take your courses,<br>
+        Catch whichever girl you may, sir!<br>
+        <br>
+        CHORUS OF MEN. My papa, etc.<br>
+        <br>
+        (Marco and Giuseppe turn round, as directed, and try to catch the<br>
+        girls. Business of blind-man's buff. Eventually Marco catches<br>
+        Gianetta, and Giuseppe catches Tessa. The two girls try to<br>
+        escape, but in vain. The two men pass their hands over the<br>
+        girls' faces to discover their identity.)<br>
+        <br>
+        GIU. I've at length achieved a capture!<br>
+        (Guessing.) This is Tessa! (removes bandage). Rapture,
+        rapture!<br>
+        <br>
+        CHORUS. Rapture, rapture!<br>
+        <br>
+        MAR. (guessing). To me Gianetta fate has granted!
+        (removes bandage).<br>
+        Just the very girl I wanted!<br>
+        <br>
+        CHORUS. Just the very girl he wanted!<br>
+        <br>
+        GIU. (politely to Mar.). If you'd rather change—<br>
+        <br>
+        TESS. My goodness!
+        This indeed is simple rudeness.<br>
+        <br>
+        MAR. (politely to Giu.). I've no preference whatever—<br>
+        <br>
+        GIA. Listen to him! Well, I never!
+        (Each man kisses each girl.)<br>
+        <br>
+        GIA. Thank you, gallant gondolieri!<br>
+        In a set and formal measure<br>
+        It is scarcely necessary<br>
+        To express our pleasure.<br>
+        Each of us to prove a treasure,<br>
+        Conjugal and monetary,<br>
+        Gladly will devote our leisure,<br>
+        Gay and gallant gondolieri.<br>
+        Tra, la, la, la, la, la, etc.<br>
+        <br>
+        TESS. Gay and gallant gondolieri,<br>
+        Take us both and hold us tightly,<br>
+        You have luck extraordinary;<br>
+        We might both have been unsightly!<br>
+        If we judge your conduct rightly,<br>
+        'Twas a choice involuntary;<br>
+        Still we thank you most politely,<br>
+        Gay and gallant gondolieri!<br>
+        Tra, la, la, la, la, la, etc.<br>
+        <br>
+        CHORUS OF Thank you, gallant gondolieri;<br>
+        GIRLS. In a set and formal measure,<br>
+        It is scarcely necessary<br>
+        To express our pleasure.<br>
+        Each of us to prove a treasure<br>
+        Gladly will devote our leisure,<br>
+        Gay and gallant gondolieri!<br>
+        Tra, la, la, la, la, la, etc.<br>
+        <br>
+        ALL. Fate in this has put his finger—<br>
+        Let us bow to Fate's decree,<br>
+        Then no longer let us linger,<br>
+        To the altar hurry we!<br>
+        <br>
+        (They all dance off two and two—Gianetta with Marco, Tessa with
+        Giuseppe.)<br>
+        <br>
+        (Flourish. A gondola arrives at the Piazzetta steps, from which<br>
+        enter the Duke of Plaza-toro, the Duchess, their daughter<br>
+        Casilda, and their attendant Luiz, who carries a drum. All are<br>
+        dressed in pompous but old and faded clothes.)<br>
+        <br>
+        (Entrance of Duke, Duchess, Casilda, and Luiz.)<br>
+        <br>
+        DUKE. From the sunny Spanish shore,
+        The Duke of Plaza-Tor!—<br>
+        <br>
+        DUCH. And His Grace's Duchess true—<br>
+        <br>
+        CAS. And His Grace's daughter, too—<br>
+        <br>
+        LUIZ. And His Grace's private drum
+        To Venetia's shores have come:<br>
+        <br>
+        ALL. If ever, ever, ever<br>
+        They get back to Spain,<br>
+        They will never, never, never<br>
+        Cross the sea again—<br>
+        <br>
+        DUKE. Neither that Grandee from the Spanish shore,<br>
+        The noble Duke of Plaza-Tor'—<br>
+        <br>
+        DUCH. Nor His Grace's Duchess, staunch and true—<br>
+        <br>
+        CAS. You may add, His Grace's daughter, too—<br>
+        <br>
+        LUIZ. Nor His Grace's own particular drum<br>
+        To Venetia's shores will come:<br>
+        <br>
+        ALL. If ever, ever, ever<br>
+        They get back to Spain,<br>
+        They will never, never, never<br>
+        Cross the sea again!<br>
+        <br>
+        DUKE. At last we have arrived at our destination. This is<br>
+        the Ducal Palace, and it is here that the Grand Inquisitor<br>
+        resides. As a Castilian hidalgo of ninety-five quarterings, I<br>
+        regret that I am unable to pay my state visit on a horse. As a<br>
+        Castilian hidalgo of that description, I should have preferred to<br>
+        ride through the streets of Venice; but owing, I presume, to an<br>
+        unusually wet season, the streets are in such a condition that<br>
+        equestrian exercise is impracticable. No matter. Where is our<br>
+        suite?<br>
+        LUIZ (coming forward). Your Grace, I am here.<br>
+        DUCH. Why do you not do yourself the honour to kneel when<br>
+        you address His Grace?<br>
+        DUKE. My love, it is so small a matter! (To Luiz.) Still,<br>
+        you may as well do it. (Luiz kneels.)<br>
+        CAS. The young man seems to entertain but an imperfect<br>
+        appreciation of the respect due from a menial to a Castilian<br>
+        hidalgo.<br>
+        DUKE. My child, you are hard upon our suite.<br>
+        CAS. Papa, I've no patience with the presumption of persons<br>
+        in his plebeian position. If he does not appreciate that<br>
+        position, let him be whipped until he does.<br>
+        DUKE. Let us hope the omission was not intended as a<br>
+        slight. I should be much hurt if I thought it was. So would he.<br>
+        (To Luiz.) Where are the halberdiers who were to have had the<br>
+        honour of meeting us here, that our visit to the Grand Inquisitor<br>
+        might be made in becoming state?<br>
+        LUIZ. Your Grace, the halberdiers are mercenary people who<br>
+        stipulated for a trifle on account.<br>
+        DUKE. How tiresome! Well, let us hope the Grand Inquisitor<br>
+        is a blind gentleman. And the band who were to have had the<br>
+        honour of escorting us? I see no band!<br>
+        LUIZ. Your Grace, the band are sordid persons who required<br>
+        to be paid in advance.<br>
+        DUCH. That's so like a band!<br>
+        DUKE (annoyed). Insuperable difficulties meet me at every
+        turn!<br>
+        DUCH. But surely they know His Grace?<br>
+        LUIZ. Exactly—they know His Grace.<br>
+        DUKE. Well, let us hope that the Grand Inquisitor is a deaf<br>
+        gentleman. A cornet-a-piston would be something. You do not<br>
+        happen to possess the accomplishment of tootling like a<br>
+        cornet-a-piston?<br>
+        LUIZ. Alas, no, Your Grace! But I can imitate a farmyard.<br>
+        DUKE (doubtfully). I don't see how that would help us. I<br>
+        don't see how we could bring it in.<br>
+        CAS. It would not help us in the least. We are not a<br>
+        parcel of graziers come to market, dolt!<br>
+        (Luiz rises.)<br>
+        DUKE. My love, our suite's feelings! (To Luiz.) Be so <br>
+        good as to ring the bell and inform the Grand Inquisitor that his<br>
+        Grace the Duke of Plaza-Toro, Count Matadoro, Baron Picadoro—<br>
+        DUCH. And suite—<br>
+        DUKE. And suite—have arrived at Venice, and seek—<br>
+        CAS. Desire—<br>
+        DUCH. Demand!<br>
+        DUKE. And demand an audience.<br>
+        LUIZ. Your Grace has but to command.<br>
+        DUKE (much moved). I felt sure of it—I felt sure of it!<br>
+        (Exit Luiz into Ducal Palace.) And now, my love—(aside to<br>
+        Duchess) Shall we tell her? I think so—(aloud to Casilda) And<br>
+        now, my love, prepare for a magnificent surprise. It is my<br>
+        agreeable duty to reveal to you a secret which should make you<br>
+        the happiest young lady in Venice!<br>
+        CAS. A secret?<br>
+        DUCH. A secret which, for State reasons, it has been
+        necessary to preserve for twenty years.<br>
+        DUKE. When you were a prattling babe of six months old you<br>
+        were married by proxy to no less a personage than the infant son<br>
+        and heir of His Majesty the immeasurably wealthy King of<br>
+        Barataria!<br>
+        CAS. Married to the infant son of the King of Barataria?<br>
+        Was I consulted? (Duke shakes his head.) Then it was a most<br>
+        unpardonable liberty!<br>
+        DUKE. Consider his extreme youth and forgive him. Shortly<br>
+        after the ceremony that misguided monarch abandoned the creed of<br>
+        his forefathers, and became a Wesleyan Methodist of the most<br>
+        bigoted and persecuting type. The Grand Inquisitor, determined<br>
+        that the innovation should not be perpetuated in Barataria,<br>
+        caused your smiling and unconscious husband to be stolen and<br>
+        conveyed to Venice. A fortnight since the Methodist Monarch and<br>
+        all his Wesleyan Court were killed in an insurrection, and we are<br>
+        here to ascertain the whereabouts of your husband, and to hail<br>
+        you, our daughter, as Her Majesty, the reigning Queen of<br>
+        Barataria! (Kneels.)<br>
+        <br>
+        (During this speech Luiz re-enters.)<br>
+        <br>
+        DUCH. Your Majesty! (Kneels.) (Drum roll.)<br>
+        DUKE. It is at such moments as these that one feels how<br>
+        necessary it is to travel with a full band.<br>
+        CAS. I, the Queen of Barataria! But I've nothing to wear!<br>
+        We are practically penniless!<br>
+        DUKE. That point has not escaped me. Although I am<br>
+        unhappily in straitened circumstances at present, my social<br>
+        influence is something enormous; and a Company, to be called the<br>
+        Duke of Plaza-Toro, Limited, is in course of formation to work<br>
+        me. An influential directorate has been secured, and I shall<br>
+        myself join the Board after allotment.<br>
+        CAS. Am I to understand that the Queen of Barataria may be<br>
+        called upon at any time to witness her honoured sire in process<br>
+        of liquidation?<br>
+        DUCH. The speculation is not exempt from that drawback. If<br>
+        your father should stop, it will, of course, be necessary to wind<br>
+        him up.<br>
+        CAS. But it's so undignified—it's so degrading! A Grandee<br>
+        of Spain turned into a public company! Such a thing was never<br>
+        heard of!<br>
+        DUKE. My child, the Duke of Plaza-Toro does not follow<br>
+        fashions—he leads them. He always leads everybody. When he was<br>
+        in the army he led his regiment. He occasionally led them into<br>
+        action. He invariably led them out of it.<br>
+        <br>
+        SONG—DUKE OF PLAZA-TORO.<br>
+        <br>
+        In enterprise of martial kind,<br>
+        When there was any fighting,<br>
+        He led his regiment from behind—<br>
+        He found it less exciting.<br>
+        But when away his regiment ran,<br>
+        His place was at the fore, O—<br>
+        That celebrated,<br>
+        Cultivated,<br>
+        Underrated<br>
+        Nobleman,<br>
+        The Duke of Plaza-Toro!<br>
+        <br>
+        ALL. In the first and foremost flight, ha, ha!<br>
+        You always found that knight, ha, ha!<br>
+        That celebrated,<br>
+        Cultivated,<br>
+        Underrated<br>
+        Nobleman,<br>
+        The Duke of Plaza-Toro!<br>
+        <br>
+        DUKE. When, to evade Destruction's hand,<br>
+        To hide they all proceeded,<br>
+        No soldier in that gallant band<br>
+        Hid half as well as he did.<br>
+        He lay concealed throughout the war,<br>
+        And so preserved his gore, O!<br>
+        That unaffected,<br>
+        Undetected,<br>
+        Well-connected<br>
+        Warrior,<br>
+        The Duke of Plaza-Toro!<br>
+        <br>
+        ALL. In every doughty deed, ha, ha!<br>
+        He always took the lead, ha, ha!<br>
+        That unaffected,<br>
+        Undetected,<br>
+        Well-connected<br>
+        Warrior,<br>
+        The Duke of Plaza-Toro!<br>
+        <br>
+        DUKE. When told that they would all be shot<br>
+        Unless they left the service,<br>
+        That hero hesitated not,<br>
+        So marvellous his nerve is.<br>
+        He sent his resignation in,<br>
+        The first of all his corps, O!<br>
+        That very knowing,<br>
+        Overflowing,<br>
+        Easy-going<br>
+        Paladin,<br>
+        The Duke of Plaza-Toro!<br>
+        <br>
+        ALL. To men of grosser clay, ha, ha!<br>
+        He always showed the way, ha, ha!<br>
+        That very knowing,<br>
+        Overflowing,<br>
+        Easy-going<br>
+        Paladin,<br>
+        The Duke of Plaza-Toro!<br>
+        <br>
+        (Exeunt Duke and Duchess into Grand Ducal Palace. As soon as<br>
+        they have disappeared, Luiz and Casilda rush to each other's<br>
+        arms.)<br>
     </p>
 </body>
 </html>
