updated opera.html and gs.css file with table section

--- a/opera.html
+++ b/opera.html
@@ -214,5 +214,32 @@
     We sing them to sleep.<br>
     </p>
     <p class="speech4">We're called gondolieri, etc.</p>
+
+    <table id="singers" border="1">
+        <thead>
+            <tr>
+              <th>Character</th>
+              <th>Singer</th>
+              <th>Offer</th>  
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Fiametta</td>
+                <td>ANTONIO</td>
+                <td>10 million</td>
+            </tr>
+            <tr>
+                <td>Giulia</td>
+                <td>DUET—MARCO</td>
+                <td>12 million</td>
+            </tr>
+            <tr>
+                <td>Vittoria</td>
+                <td>GIUSEPPE</td>
+                <td>8 million</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
