updated opera.html, opera2.html, gs.css and added 2 images

--- a/opera.html
+++ b/opera.html
@@ -242,5 +242,15 @@
         </tbody>
     </table>
     <a href="opera2.html">Link to Opera2</a>
+
+    <div style="text-align: left;">
+        <img src ="THE GONDOLIERS.jpg" height ="400" width ="400" class="left">
+    </div>
+    <ul>
+    <li>
+        <a href="opera2.html">LINK TO OPERA 2</a>
+    </li>
+    <li><a href="opera.html">LINK TO OPERA</a></li>
+    </ul>
 </body>
 </html>
