--- a/opera2.html
+++ b/opera2.html
@@ -80,5 +80,13 @@
     We sing them to sleep.<br>
     </p>
     <a href="opera.html">Link Back to Opera</a>
+
+    <div style="text-align: left;">
+        <img src ="Marco and Giuseppe.jpg" height ="300" width ="300" class="left">
+    </div>
+    <ul>
+    <li><a href="opera.html">LINK TO OPERA</a></li>
+    <li><a href="opera2.html">LINK TO OPERA 2</a></li>
+    </ul>
 </body>
 </html>
