updated gs.css, opera.html and opera2.html

--- a/opera2.html
+++ b/opera2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>And the Show Goes on</title>
     <link rel="stylesheet" href="gs.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <p class = "direction">
@@ -81,6 +82,16 @@
     </p>
     <a href="opera.html">Link Back to Opera</a>
 
+    <h2 style="color:orangered">Material Design Icons from Google</h2>
+    <i class="material-icons">favorite</i>
+    <i class="material-icons">cloud</i>
+    <i class="material-icons">attachment</i>
+    <i class="material-icons">computer</i>
+    <i class="material-icons">fingerprint</i>
+    <i class="material-icons">face</i>
+    <i class="material-icons">fact_check</i>
+    <i class="material-icons">exit_to_app</i><br>
+    <br>
     <div style="text-align: left;">
         <img src ="Marco and Giuseppe.jpg" height ="300" width ="300" class="left">
     </div>
