--- a/opera.html
+++ b/opera.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="gs.css"/>
     <title>Welcome to Opera</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <h1> Naga Akhil Chaparala Productions LTD</h1>
@@ -243,6 +244,16 @@
     </table>
     <a href="opera2.html">Link to Opera2</a>
 
+    <h2 style="color:blueviolet">Material Design Icons from Google</h2>
+    <i class="material-icons">favorite</i>
+    <i class="material-icons">cloud</i>
+    <i class="material-icons">attachment</i>
+    <i class="material-icons">computer</i>
+    <i class="material-icons">fingerprint</i>
+    <i class="material-icons">face</i>
+    <i class="material-icons">fact_check</i>
+    <i class="material-icons">exit_to_app</i><br>
+    <br>
     <div style="text-align: left;">
         <img src ="THE GONDOLIERS.jpg" height ="400" width ="400" class="left">
     </div>
